feat: add more docs
